Compiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    K_NULL
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> <empty>
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> function_declaration
Rule 5     statement -> compound_statement
Rule 6     compound_statement -> function_call_statement
Rule 7     compound_statement -> variable_declaration
Rule 8     compound_statement -> selection_statement
Rule 9     compound_statement -> iteration_statement
Rule 10    compound_statement -> jump_statement
Rule 11    function_call_statement -> ID LPAREN parameter_list RPAREN
Rule 12    function_call_statement -> ID LPAREN RPAREN
Rule 13    parameter_list -> parameter_list COMMA expression
Rule 14    parameter_list -> expression
Rule 15    variable_declaration -> pre_type_modifier type ID
Rule 16    variable_declaration -> pre_type_modifier type ID ASSIGN expression
Rule 17    variable_declaration -> ID ASSIGN expression
Rule 18    pre_type_modifier -> <empty>
Rule 19    pre_type_modifier -> K_LIST
Rule 20    pre_type_modifier -> K_DICT
Rule 21    pre_type_modifier -> K_SET
Rule 22    type -> K_INT
Rule 23    type -> K_DOUBLE
Rule 24    type -> K_STRING
Rule 25    type -> K_BOOL
Rule 26    type -> K_WINDOW
Rule 27    type -> K_SHAPE
Rule 28    type -> K_TRIANGLE
Rule 29    type -> K_RECTANGLE
Rule 30    type -> K_CIRCLE
Rule 31    type -> K_POINT
Rule 32    type -> K_TEXT
Rule 33    expression -> string_expression
Rule 34    expression -> unary_expression
Rule 35    expression -> boolean_expression
Rule 36    expression -> arithmetic_expression
Rule 37    string_expression -> string_expression PLUS string_term
Rule 38    string_expression -> string_term
Rule 39    string_term -> function_call_statement
Rule 40    string_term -> STRING
Rule 41    string_term -> ID
Rule 42    unary_expression -> ID
Rule 43    unary_expression -> STRING
Rule 44    unary_expression -> INTEGER
Rule 45    unary_expression -> function_call_statement
Rule 46    unary_expression -> DOUBLE
Rule 47    unary_expression -> K_TRUE
Rule 48    unary_expression -> K_FALSE
Rule 49    boolean_expression -> boolean_expression OR boolean_term
Rule 50    boolean_expression -> boolean_term
Rule 51    boolean_term -> boolean_term AND boolean_factor
Rule 52    boolean_term -> boolean_factor
Rule 53    boolean_factor -> LPAREN boolean_expression RPAREN
Rule 54    boolean_factor -> unary_expression comparator unary_expression
Rule 55    boolean_factor -> arithmetic_expression comparator arithmetic_expression
Rule 56    boolean_factor -> string_expression comparator string_expression
Rule 57    boolean_factor -> unary_expression
Rule 58    boolean_factor -> NEG boolean_factor
Rule 59    comparator -> GT
Rule 60    comparator -> LT
Rule 61    comparator -> GEQ
Rule 62    comparator -> LEQ
Rule 63    comparator -> EQ
Rule 64    comparator -> NEQ
Rule 65    arithmetic_expression -> arithmetic_expression PLUS arithmetic_term
Rule 66    arithmetic_expression -> arithmetic_expression MINUS arithmetic_term
Rule 67    arithmetic_expression -> arithmetic_term
Rule 68    arithmetic_term -> arithmetic_term TIMES arithmetic_factor
Rule 69    arithmetic_term -> arithmetic_term DIVIDE arithmetic_factor
Rule 70    arithmetic_term -> arithmetic_term MOD arithmetic_factor
Rule 71    arithmetic_term -> arithmetic_factor
Rule 72    arithmetic_factor -> LPAREN arithmetic_expression RPAREN
Rule 73    arithmetic_factor -> number
Rule 74    arithmetic_factor -> ID
Rule 75    arithmetic_factor -> function_call_statement
Rule 76    arithmetic_factor -> MINUS arithmetic_factor
Rule 77    number -> INTEGER
Rule 78    number -> DOUBLE
Rule 79    selection_statement -> K_IF LPAREN boolean_expression RPAREN compound_statement_list else_if_statement_list else_statement K_END
Rule 80    else_if_statement_list -> <empty>
Rule 81    else_if_statement_list -> else_if_statement_list else_if_statement
Rule 82    else_if_statement -> K_EF LPAREN boolean_expression RPAREN compound_statement_list
Rule 83    else_statement -> <empty>
Rule 84    else_statement -> K_EL compound_statement_list
Rule 85    compound_statement_list -> <empty>
Rule 86    compound_statement_list -> compound_statement_list compound_statement
Rule 87    iteration_statement -> K_WHILE LPAREN boolean_expression RPAREN compound_statement_list K_END
Rule 88    jump_statement -> K_CONTINUE
Rule 89    jump_statement -> K_BREAK
Rule 90    jump_statement -> K_DONE
Rule 91    function_declaration -> pre_type_modifier type ID LPAREN argument_list RPAREN ASSIGN unary_expression compound_statement_list K_END
Rule 92    function_declaration -> pre_type_modifier type ID LPAREN RPAREN ASSIGN unary_expression compound_statement_list K_END
Rule 93    argument_list -> argument_list COMMA argument
Rule 94    argument_list -> argument
Rule 95    argument -> pre_type_modifier type ID

Terminals, with rules where they appear

AND                  : 51
ASSIGN               : 16 17 91 92
COMMA                : 13 93
COMMENT              : 
DIVIDE               : 69
DOUBLE               : 46 78
EQ                   : 63
GEQ                  : 61
GT                   : 59
ID                   : 11 12 15 16 17 41 42 74 91 92 95
INTEGER              : 44 77
K_BOOL               : 25
K_BREAK              : 89
K_CIRCLE             : 30
K_CONTINUE           : 88
K_DICT               : 20
K_DONE               : 90
K_DOUBLE             : 23
K_EF                 : 82
K_EL                 : 84
K_END                : 79 87 91 92
K_FALSE              : 48
K_IF                 : 79
K_INT                : 22
K_LIST               : 19
K_NULL               : 
K_POINT              : 31
K_RECTANGLE          : 29
K_SET                : 21
K_SHAPE              : 27
K_STRING             : 24
K_TEXT               : 32
K_TRIANGLE           : 28
K_TRUE               : 47
K_WHILE              : 87
K_WINDOW             : 26
LEQ                  : 62
LPAREN               : 11 12 53 72 79 82 87 91 92
LT                   : 60
MINUS                : 66 76
MOD                  : 70
NEG                  : 58
NEQ                  : 64
OR                   : 49
PLUS                 : 37 65
RPAREN               : 11 12 53 72 79 82 87 91 92
STRING               : 40 43
TIMES                : 68
error                : 

Nonterminals, with rules where they appear

argument             : 93 94
argument_list        : 91 93
arithmetic_expression : 36 55 55 65 66 72
arithmetic_factor    : 68 69 70 71 76
arithmetic_term      : 65 66 67 68 69 70
boolean_expression   : 35 49 53 79 82 87
boolean_factor       : 51 52 58
boolean_term         : 49 50 51
comparator           : 54 55 56
compound_statement   : 5 86
compound_statement_list : 79 82 84 86 87 91 92
else_if_statement    : 81
else_if_statement_list : 79 81
else_statement       : 79
expression           : 13 14 16 17
function_call_statement : 6 39 45 75
function_declaration : 4
iteration_statement  : 9
jump_statement       : 10
number               : 73
parameter_list       : 11 13
pre_type_modifier    : 15 16 91 92 95
program              : 0
selection_statement  : 8
statement            : 3
statement_list       : 1 3
string_expression    : 33 37 56 56
string_term          : 37 38
type                 : 15 16 91 92 95
unary_expression     : 34 54 54 57 91 92
variable_declaration : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> .
    (3) statement_list -> . statement_list statement

    K_LIST          reduce using rule 2 (statement_list -> .)
    K_DICT          reduce using rule 2 (statement_list -> .)
    K_SET           reduce using rule 2 (statement_list -> .)
    ID              reduce using rule 2 (statement_list -> .)
    K_IF            reduce using rule 2 (statement_list -> .)
    K_WHILE         reduce using rule 2 (statement_list -> .)
    K_CONTINUE      reduce using rule 2 (statement_list -> .)
    K_BREAK         reduce using rule 2 (statement_list -> .)
    K_DONE          reduce using rule 2 (statement_list -> .)
    K_INT           reduce using rule 2 (statement_list -> .)
    K_DOUBLE        reduce using rule 2 (statement_list -> .)
    K_STRING        reduce using rule 2 (statement_list -> .)
    K_BOOL          reduce using rule 2 (statement_list -> .)
    K_WINDOW        reduce using rule 2 (statement_list -> .)
    K_SHAPE         reduce using rule 2 (statement_list -> .)
    K_TRIANGLE      reduce using rule 2 (statement_list -> .)
    K_RECTANGLE     reduce using rule 2 (statement_list -> .)
    K_CIRCLE        reduce using rule 2 (statement_list -> .)
    K_POINT         reduce using rule 2 (statement_list -> .)
    K_TEXT          reduce using rule 2 (statement_list -> .)
    $end            reduce using rule 2 (statement_list -> .)

    statement_list                 shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . function_declaration
    (5) statement -> . compound_statement
    (91) function_declaration -> . pre_type_modifier type ID LPAREN argument_list RPAREN ASSIGN unary_expression compound_statement_list K_END
    (92) function_declaration -> . pre_type_modifier type ID LPAREN RPAREN ASSIGN unary_expression compound_statement_list K_END
    (6) compound_statement -> . function_call_statement
    (7) compound_statement -> . variable_declaration
    (8) compound_statement -> . selection_statement
    (9) compound_statement -> . iteration_statement
    (10) compound_statement -> . jump_statement
    (18) pre_type_modifier -> .
    (19) pre_type_modifier -> . K_LIST
    (20) pre_type_modifier -> . K_DICT
    (21) pre_type_modifier -> . K_SET
    (11) function_call_statement -> . ID LPAREN parameter_list RPAREN
    (12) function_call_statement -> . ID LPAREN RPAREN
    (15) variable_declaration -> . pre_type_modifier type ID
    (16) variable_declaration -> . pre_type_modifier type ID ASSIGN expression
    (17) variable_declaration -> . ID ASSIGN expression
    (79) selection_statement -> . K_IF LPAREN boolean_expression RPAREN compound_statement_list else_if_statement_list else_statement K_END
    (87) iteration_statement -> . K_WHILE LPAREN boolean_expression RPAREN compound_statement_list K_END
    (88) jump_statement -> . K_CONTINUE
    (89) jump_statement -> . K_BREAK
    (90) jump_statement -> . K_DONE

    $end            reduce using rule 1 (program -> statement_list .)
    K_INT           reduce using rule 18 (pre_type_modifier -> .)
    K_DOUBLE        reduce using rule 18 (pre_type_modifier -> .)
    K_STRING        reduce using rule 18 (pre_type_modifier -> .)
    K_BOOL          reduce using rule 18 (pre_type_modifier -> .)
    K_WINDOW        reduce using rule 18 (pre_type_modifier -> .)
    K_SHAPE         reduce using rule 18 (pre_type_modifier -> .)
    K_TRIANGLE      reduce using rule 18 (pre_type_modifier -> .)
    K_RECTANGLE     reduce using rule 18 (pre_type_modifier -> .)
    K_CIRCLE        reduce using rule 18 (pre_type_modifier -> .)
    K_POINT         reduce using rule 18 (pre_type_modifier -> .)
    K_TEXT          reduce using rule 18 (pre_type_modifier -> .)
    K_LIST          shift and go to state 13
    K_DICT          shift and go to state 15
    K_SET           shift and go to state 9
    ID              shift and go to state 16
    K_IF            shift and go to state 4
    K_WHILE         shift and go to state 7
    K_CONTINUE      shift and go to state 11
    K_BREAK         shift and go to state 12
    K_DONE          shift and go to state 20

    jump_statement                 shift and go to state 17
    function_declaration           shift and go to state 18
    compound_statement             shift and go to state 8
    iteration_statement            shift and go to state 5
    selection_statement            shift and go to state 3
    function_call_statement        shift and go to state 19
    statement                      shift and go to state 10
    pre_type_modifier              shift and go to state 14
    variable_declaration           shift and go to state 6

state 2

    (0) S' -> program .



state 3

    (8) compound_statement -> selection_statement .

    K_END           reduce using rule 8 (compound_statement -> selection_statement .)
    ID              reduce using rule 8 (compound_statement -> selection_statement .)
    K_IF            reduce using rule 8 (compound_statement -> selection_statement .)
    K_WHILE         reduce using rule 8 (compound_statement -> selection_statement .)
    K_CONTINUE      reduce using rule 8 (compound_statement -> selection_statement .)
    K_BREAK         reduce using rule 8 (compound_statement -> selection_statement .)
    K_DONE          reduce using rule 8 (compound_statement -> selection_statement .)
    K_LIST          reduce using rule 8 (compound_statement -> selection_statement .)
    K_DICT          reduce using rule 8 (compound_statement -> selection_statement .)
    K_SET           reduce using rule 8 (compound_statement -> selection_statement .)
    K_INT           reduce using rule 8 (compound_statement -> selection_statement .)
    K_DOUBLE        reduce using rule 8 (compound_statement -> selection_statement .)
    K_STRING        reduce using rule 8 (compound_statement -> selection_statement .)
    K_BOOL          reduce using rule 8 (compound_statement -> selection_statement .)
    K_WINDOW        reduce using rule 8 (compound_statement -> selection_statement .)
    K_SHAPE         reduce using rule 8 (compound_statement -> selection_statement .)
    K_TRIANGLE      reduce using rule 8 (compound_statement -> selection_statement .)
    K_RECTANGLE     reduce using rule 8 (compound_statement -> selection_statement .)
    K_CIRCLE        reduce using rule 8 (compound_statement -> selection_statement .)
    K_POINT         reduce using rule 8 (compound_statement -> selection_statement .)
    K_TEXT          reduce using rule 8 (compound_statement -> selection_statement .)
    K_EL            reduce using rule 8 (compound_statement -> selection_statement .)
    K_EF            reduce using rule 8 (compound_statement -> selection_statement .)
    $end            reduce using rule 8 (compound_statement -> selection_statement .)


state 4

    (79) selection_statement -> K_IF . LPAREN boolean_expression RPAREN compound_statement_list else_if_statement_list else_statement K_END

    LPAREN          shift and go to state 21


state 5

    (9) compound_statement -> iteration_statement .

    K_END           reduce using rule 9 (compound_statement -> iteration_statement .)
    ID              reduce using rule 9 (compound_statement -> iteration_statement .)
    K_IF            reduce using rule 9 (compound_statement -> iteration_statement .)
    K_WHILE         reduce using rule 9 (compound_statement -> iteration_statement .)
    K_CONTINUE      reduce using rule 9 (compound_statement -> iteration_statement .)
    K_BREAK         reduce using rule 9 (compound_statement -> iteration_statement .)
    K_DONE          reduce using rule 9 (compound_statement -> iteration_statement .)
    K_LIST          reduce using rule 9 (compound_statement -> iteration_statement .)
    K_DICT          reduce using rule 9 (compound_statement -> iteration_statement .)
    K_SET           reduce using rule 9 (compound_statement -> iteration_statement .)
    K_INT           reduce using rule 9 (compound_statement -> iteration_statement .)
    K_DOUBLE        reduce using rule 9 (compound_statement -> iteration_statement .)
    K_STRING        reduce using rule 9 (compound_statement -> iteration_statement .)
    K_BOOL          reduce using rule 9 (compound_statement -> iteration_statement .)
    K_WINDOW        reduce using rule 9 (compound_statement -> iteration_statement .)
    K_SHAPE         reduce using rule 9 (compound_statement -> iteration_statement .)
    K_TRIANGLE      reduce using rule 9 (compound_statement -> iteration_statement .)
    K_RECTANGLE     reduce using rule 9 (compound_statement -> iteration_statement .)
    K_CIRCLE        reduce using rule 9 (compound_statement -> iteration_statement .)
    K_POINT         reduce using rule 9 (compound_statement -> iteration_statement .)
    K_TEXT          reduce using rule 9 (compound_statement -> iteration_statement .)
    K_EL            reduce using rule 9 (compound_statement -> iteration_statement .)
    K_EF            reduce using rule 9 (compound_statement -> iteration_statement .)
    $end            reduce using rule 9 (compound_statement -> iteration_statement .)


state 6

    (7) compound_statement -> variable_declaration .

    K_END           reduce using rule 7 (compound_statement -> variable_declaration .)
    ID              reduce using rule 7 (compound_statement -> variable_declaration .)
    K_IF            reduce using rule 7 (compound_statement -> variable_declaration .)
    K_WHILE         reduce using rule 7 (compound_statement -> variable_declaration .)
    K_CONTINUE      reduce using rule 7 (compound_statement -> variable_declaration .)
    K_BREAK         reduce using rule 7 (compound_statement -> variable_declaration .)
    K_DONE          reduce using rule 7 (compound_statement -> variable_declaration .)
    K_LIST          reduce using rule 7 (compound_statement -> variable_declaration .)
    K_DICT          reduce using rule 7 (compound_statement -> variable_declaration .)
    K_SET           reduce using rule 7 (compound_statement -> variable_declaration .)
    K_INT           reduce using rule 7 (compound_statement -> variable_declaration .)
    K_DOUBLE        reduce using rule 7 (compound_statement -> variable_declaration .)
    K_STRING        reduce using rule 7 (compound_statement -> variable_declaration .)
    K_BOOL          reduce using rule 7 (compound_statement -> variable_declaration .)
    K_WINDOW        reduce using rule 7 (compound_statement -> variable_declaration .)
    K_SHAPE         reduce using rule 7 (compound_statement -> variable_declaration .)
    K_TRIANGLE      reduce using rule 7 (compound_statement -> variable_declaration .)
    K_RECTANGLE     reduce using rule 7 (compound_statement -> variable_declaration .)
    K_CIRCLE        reduce using rule 7 (compound_statement -> variable_declaration .)
    K_POINT         reduce using rule 7 (compound_statement -> variable_declaration .)
    K_TEXT          reduce using rule 7 (compound_statement -> variable_declaration .)
    K_EL            reduce using rule 7 (compound_statement -> variable_declaration .)
    K_EF            reduce using rule 7 (compound_statement -> variable_declaration .)
    $end            reduce using rule 7 (compound_statement -> variable_declaration .)


state 7

    (87) iteration_statement -> K_WHILE . LPAREN boolean_expression RPAREN compound_statement_list K_END

    LPAREN          shift and go to state 22


state 8

    (5) statement -> compound_statement .

    K_LIST          reduce using rule 5 (statement -> compound_statement .)
    K_DICT          reduce using rule 5 (statement -> compound_statement .)
    K_SET           reduce using rule 5 (statement -> compound_statement .)
    ID              reduce using rule 5 (statement -> compound_statement .)
    K_IF            reduce using rule 5 (statement -> compound_statement .)
    K_WHILE         reduce using rule 5 (statement -> compound_statement .)
    K_CONTINUE      reduce using rule 5 (statement -> compound_statement .)
    K_BREAK         reduce using rule 5 (statement -> compound_statement .)
    K_DONE          reduce using rule 5 (statement -> compound_statement .)
    K_INT           reduce using rule 5 (statement -> compound_statement .)
    K_DOUBLE        reduce using rule 5 (statement -> compound_statement .)
    K_STRING        reduce using rule 5 (statement -> compound_statement .)
    K_BOOL          reduce using rule 5 (statement -> compound_statement .)
    K_WINDOW        reduce using rule 5 (statement -> compound_statement .)
    K_SHAPE         reduce using rule 5 (statement -> compound_statement .)
    K_TRIANGLE      reduce using rule 5 (statement -> compound_statement .)
    K_RECTANGLE     reduce using rule 5 (statement -> compound_statement .)
    K_CIRCLE        reduce using rule 5 (statement -> compound_statement .)
    K_POINT         reduce using rule 5 (statement -> compound_statement .)
    K_TEXT          reduce using rule 5 (statement -> compound_statement .)
    $end            reduce using rule 5 (statement -> compound_statement .)


state 9

    (21) pre_type_modifier -> K_SET .

    K_INT           reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_DOUBLE        reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_STRING        reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_BOOL          reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_WINDOW        reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_SHAPE         reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_TRIANGLE      reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_RECTANGLE     reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_CIRCLE        reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_POINT         reduce using rule 21 (pre_type_modifier -> K_SET .)
    K_TEXT          reduce using rule 21 (pre_type_modifier -> K_SET .)


state 10

    (3) statement_list -> statement_list statement .

    K_LIST          reduce using rule 3 (statement_list -> statement_list statement .)
    K_DICT          reduce using rule 3 (statement_list -> statement_list statement .)
    K_SET           reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    K_IF            reduce using rule 3 (statement_list -> statement_list statement .)
    K_WHILE         reduce using rule 3 (statement_list -> statement_list statement .)
    K_CONTINUE      reduce using rule 3 (statement_list -> statement_list statement .)
    K_BREAK         reduce using rule 3 (statement_list -> statement_list statement .)
    K_DONE          reduce using rule 3 (statement_list -> statement_list statement .)
    K_INT           reduce using rule 3 (statement_list -> statement_list statement .)
    K_DOUBLE        reduce using rule 3 (statement_list -> statement_list statement .)
    K_STRING        reduce using rule 3 (statement_list -> statement_list statement .)
    K_BOOL          reduce using rule 3 (statement_list -> statement_list statement .)
    K_WINDOW        reduce using rule 3 (statement_list -> statement_list statement .)
    K_SHAPE         reduce using rule 3 (statement_list -> statement_list statement .)
    K_TRIANGLE      reduce using rule 3 (statement_list -> statement_list statement .)
    K_RECTANGLE     reduce using rule 3 (statement_list -> statement_list statement .)
    K_CIRCLE        reduce using rule 3 (statement_list -> statement_list statement .)
    K_POINT         reduce using rule 3 (statement_list -> statement_list statement .)
    K_TEXT          reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)


state 11

    (88) jump_statement -> K_CONTINUE .

    ID              reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_IF            reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_WHILE         reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_CONTINUE      reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_BREAK         reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_DONE          reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_LIST          reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_DICT          reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_SET           reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_INT           reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_DOUBLE        reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_STRING        reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_BOOL          reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_WINDOW        reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_SHAPE         reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_TRIANGLE      reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_RECTANGLE     reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_CIRCLE        reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_POINT         reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_TEXT          reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_EL            reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_EF            reduce using rule 88 (jump_statement -> K_CONTINUE .)
    K_END           reduce using rule 88 (jump_statement -> K_CONTINUE .)
    $end            reduce using rule 88 (jump_statement -> K_CONTINUE .)


state 12

    (89) jump_statement -> K_BREAK .

    ID              reduce using rule 89 (jump_statement -> K_BREAK .)
    K_IF            reduce using rule 89 (jump_statement -> K_BREAK .)
    K_WHILE         reduce using rule 89 (jump_statement -> K_BREAK .)
    K_CONTINUE      reduce using rule 89 (jump_statement -> K_BREAK .)
    K_BREAK         reduce using rule 89 (jump_statement -> K_BREAK .)
    K_DONE          reduce using rule 89 (jump_statement -> K_BREAK .)
    K_LIST          reduce using rule 89 (jump_statement -> K_BREAK .)
    K_DICT          reduce using rule 89 (jump_statement -> K_BREAK .)
    K_SET           reduce using rule 89 (jump_statement -> K_BREAK .)
    K_INT           reduce using rule 89 (jump_statement -> K_BREAK .)
    K_DOUBLE        reduce using rule 89 (jump_statement -> K_BREAK .)
    K_STRING        reduce using rule 89 (jump_statement -> K_BREAK .)
    K_BOOL          reduce using rule 89 (jump_statement -> K_BREAK .)
    K_WINDOW        reduce using rule 89 (jump_statement -> K_BREAK .)
    K_SHAPE         reduce using rule 89 (jump_statement -> K_BREAK .)
    K_TRIANGLE      reduce using rule 89 (jump_statement -> K_BREAK .)
    K_RECTANGLE     reduce using rule 89 (jump_statement -> K_BREAK .)
    K_CIRCLE        reduce using rule 89 (jump_statement -> K_BREAK .)
    K_POINT         reduce using rule 89 (jump_statement -> K_BREAK .)
    K_TEXT          reduce using rule 89 (jump_statement -> K_BREAK .)
    K_EL            reduce using rule 89 (jump_statement -> K_BREAK .)
    K_EF            reduce using rule 89 (jump_statement -> K_BREAK .)
    K_END           reduce using rule 89 (jump_statement -> K_BREAK .)
    $end            reduce using rule 89 (jump_statement -> K_BREAK .)


state 13

    (19) pre_type_modifier -> K_LIST .

    K_INT           reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_DOUBLE        reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_STRING        reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_BOOL          reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_WINDOW        reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_SHAPE         reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_TRIANGLE      reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_RECTANGLE     reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_CIRCLE        reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_POINT         reduce using rule 19 (pre_type_modifier -> K_LIST .)
    K_TEXT          reduce using rule 19 (pre_type_modifier -> K_LIST .)


state 14

    (91) function_declaration -> pre_type_modifier . type ID LPAREN argument_list RPAREN ASSIGN unary_expression compound_statement_list K_END
    (92) function_declaration -> pre_type_modifier . type ID LPAREN RPAREN ASSIGN unary_expression compound_statement_list K_END
    (15) variable_declaration -> pre_type_modifier . type ID
    (16) variable_declaration -> pre_type_modifier . type ID ASSIGN expression
    (22) type -> . K_INT
    (23) type -> . K_DOUBLE
    (24) type -> . K_STRING
    (25) type -> . K_BOOL
    (26) type -> . K_WINDOW
    (27) type -> . K_SHAPE
    (28) type -> . K_TRIANGLE
    (29) type -> . K_RECTANGLE
    (30) type -> . K_CIRCLE
    (31) type -> . K_POINT
    (32) type -> . K_TEXT

    K_INT           shift and go to state 30
    K_DOUBLE        shift and go to state 23
    K_STRING        shift and go to state 24
    K_BOOL          shift and go to state 31
    K_WINDOW        shift and go to state 34
    K_SHAPE         shift and go to state 27
    K_TRIANGLE      shift and go to state 25
    K_RECTANGLE     shift and go to state 33
    K_CIRCLE        shift and go to state 26
    K_POINT         shift and go to state 29
    K_TEXT          shift and go to state 28

    type                           shift and go to state 32

state 15

    (20) pre_type_modifier -> K_DICT .

    K_INT           reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_DOUBLE        reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_STRING        reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_BOOL          reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_WINDOW        reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_SHAPE         reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_TRIANGLE      reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_RECTANGLE     reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_CIRCLE        reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_POINT         reduce using rule 20 (pre_type_modifier -> K_DICT .)
    K_TEXT          reduce using rule 20 (pre_type_modifier -> K_DICT .)


state 16

    (11) function_call_statement -> ID . LPAREN parameter_list RPAREN
    (12) function_call_statement -> ID . LPAREN RPAREN
    (17) variable_declaration -> ID . ASSIGN expression

    LPAREN          shift and go to state 36
    ASSIGN          shift and go to state 35


state 17

    (10) compound_statement -> jump_statement .

    K_END           reduce using rule 10 (compound_statement -> jump_statement .)
    ID              reduce using rule 10 (compound_statement -> jump_statement .)
    K_IF            reduce using rule 10 (compound_statement -> jump_statement .)
    K_WHILE         reduce using rule 10 (compound_statement -> jump_statement .)
    K_CONTINUE      reduce using rule 10 (compound_statement -> jump_statement .)
    K_BREAK         reduce using rule 10 (compound_statement -> jump_statement .)
    K_DONE          reduce using rule 10 (compound_statement -> jump_statement .)
    K_LIST          reduce using rule 10 (compound_statement -> jump_statement .)
    K_DICT          reduce using rule 10 (compound_statement -> jump_statement .)
    K_SET           reduce using rule 10 (compound_statement -> jump_statement .)
    K_INT           reduce using rule 10 (compound_statement -> jump_statement .)
    K_DOUBLE        reduce using rule 10 (compound_statement -> jump_statement .)
    K_STRING        reduce using rule 10 (compound_statement -> jump_statement .)
    K_BOOL          reduce using rule 10 (compound_statement -> jump_statement .)
    K_WINDOW        reduce using rule 10 (compound_statement -> jump_statement .)
    K_SHAPE         reduce using rule 10 (compound_statement -> jump_statement .)
    K_TRIANGLE      reduce using rule 10 (compound_statement -> jump_statement .)
    K_RECTANGLE     reduce using rule 10 (compound_statement -> jump_statement .)
    K_CIRCLE        reduce using rule 10 (compound_statement -> jump_statement .)
    K_POINT         reduce using rule 10 (compound_statement -> jump_statement .)
    K_TEXT          reduce using rule 10 (compound_statement -> jump_statement .)
    K_EL            reduce using rule 10 (compound_statement -> jump_statement .)
    K_EF            reduce using rule 10 (compound_statement -> jump_statement .)
    $end            reduce using rule 10 (compound_statement -> jump_statement .)


state 18

    (4) statement -> function_declaration .

    K_LIST          reduce using rule 4 (statement -> function_declaration .)
    K_DICT          reduce using rule 4 (statement -> function_declaration .)
    K_SET           reduce using rule 4 (statement -> function_declaration .)
    ID              reduce using rule 4 (statement -> function_declaration .)
    K_IF            reduce using rule 4 (statement -> function_declaration .)
    K_WHILE         reduce using rule 4 (statement -> function_declaration .)
    K_CONTINUE      reduce using rule 4 (statement -> function_declaration .)
    K_BREAK         reduce using rule 4 (statement -> function_declaration .)
    K_DONE          reduce using rule 4 (statement -> function_declaration .)
    K_INT           reduce using rule 4 (statement -> function_declaration .)
    K_DOUBLE        reduce using rule 4 (statement -> function_declaration .)
    K_STRING        reduce using rule 4 (statement -> function_declaration .)
    K_BOOL          reduce using rule 4 (statement -> function_declaration .)
    K_WINDOW        reduce using rule 4 (statement -> function_declaration .)
    K_SHAPE         reduce using rule 4 (statement -> function_declaration .)
    K_TRIANGLE      reduce using rule 4 (statement -> function_declaration .)
    K_RECTANGLE     reduce using rule 4 (statement -> function_declaration .)
    K_CIRCLE        reduce using rule 4 (statement -> function_declaration .)
    K_POINT         reduce using rule 4 (statement -> function_declaration .)
    K_TEXT          reduce using rule 4 (statement -> function_declaration .)
    $end            reduce using rule 4 (statement -> function_declaration .)


state 19

    (6) compound_statement -> function_call_statement .
